--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,10 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.0.0",
+    "phpunit/phpunit": "^9.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.5"
+    "phpunit/php-code-coverage": "^9.2"
   }
 }
