--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,11 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.0.0",
-    "phpunit/phpunit": "^9.5"
+    "php": ">=7.0.0"
   },
   "require-dev": {
-    "phpunit/php-code-coverage": "^9.2"
+    "phpunit/phpunit": "^9.5",
+    "phpunit/php-code-coverage": "^9.2",
+    "squizlabs/php_codesniffer": "3.*"
   }
 }
